resolved some warnings